Sample wiremock rest service added